--- a/aboutus.html
+++ b/aboutus.html
@@ -18,13 +18,13 @@
 			<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
 				<ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 					<li class="nav-item active">
-						<a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="/index.html">HOME <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/aboutus">ABOUT US</a>
+						<a class="nav-link" href="/aboutus.html">ABOUT US</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/locations">LOCATIONS</a>
+						<a class="nav-link" href="/locations.html">LOCATIONS</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">VOLUNTEERING</a>
@@ -38,12 +38,39 @@
 	</header>
 	<div class="container">
 <p>
-	ErrandFolks provides various services to people who can’t do errands during this pandemic.
+	<h1>What is ErrandFolks?</h1> <p>We are a volunteer based service that provides assistance to Deaf elders and people with health risks during this difficult time of the COVID-19 pandemic. Most of them are at risk to go out and collect their groceries or do any type of errands, and we want to help remove that fear. If you need grocery shopping, The ErrandFolks got you! We only can't pick up prescriptions. </p>
+</br> 
+<p>
+	How does it all work? Our ultimate goal is to keep this simple and sweet for all of you! First, you will need to send an email to info@ErrandFolks.com that you need support. We will respond with a few questions (your location/what you need/where we find them/when need it) Then we will send out confidential information to our folks in your location to see who is available to help you. When we have an ErrandFolk ready to support you, they will be connected with you to work together to get your errands done. </p>
 </br>
-	ErrandFolks provides assistance to people who need it the most. We focus on people who are at high risk of being impacted by COVID-19, such as the immunocompromised, chronically ill, disabled people, and the elderly.
-</p>		
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FErrandFolks%2Fvideos%2F3746497888753638%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>		
+	Now, we’ve grown to over 70 volunteers in 15+ states. All of the volunteers are part of the signing community ranging from deaf, hard of hearing, interpreters and ASL users.
+	
+</p>	
+
+<div class="container">
+	<div class="row">
+	  <div class="col-6">
+		<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FErrandFolks%2Fvideos%2F3746497888753638%2F&autoplay=1&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+	  </div>
+	  <div class="col-6">
+		<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FErrandFolks%2Fvideos%2F1312756429112379%2F&autoplay=1&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+	  </div>
+	</div>
+
+	</div>
+</div>
+
 		</div>
+		<footer class="footer">
+			<center>
+		
+				<p>info@errandfolks.com</p>
+				<p>2020 @ JAM</p>
+
+			
+			</center>
+		</footer>
+
 		<div id="fb-root"></div>
 		<script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0">
 		</script> 
