--- a/locations.html
+++ b/locations.html
@@ -58,7 +58,7 @@
 		<div id="fb-root"></div>
 		<script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0">
 		</script> 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript">
 		</script> 
 		<script src="script.js">
 		</script> 
