--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
 	<link href="style.css" rel="stylesheet" type="text/css">
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+
 	<title>Errand Folks</title>
 </head>
 <body>
