--- a/locations.html
+++ b/locations.html
@@ -27,7 +27,7 @@
 						<a class="nav-link" href="/locations.html">LOCATIONS</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">VOLUNTEERING</a>
+						<a class="nav-link" href="/volunteer.html">VOLUNTEERING</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">CONTACT US</a>
@@ -37,7 +37,6 @@
 		</nav>
 	</header>
 	<div class="container">
-        
         <img alt="logo" height="70" id="map1" src="map1.jpg" width="70">
 
 
