--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<div class="card">
 					<img alt="seeking support image" class="card-img-top" src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/p960x960/89435303_111647240457211_8864682559003426816_o.png?_nc_cat=109&_nc_sid=8024bb&_nc_oc=AQm_EZ0b9X3F39ySbceoZaxC0eeUjHAPkCxGbGE1DmbcFnNe4iAu3Iovtqn6bosPjyc&_nc_ht=scontent-lga3-1.xx&oh=7134664a1333b17f0ffc877d8fc29ccb&oe=5EF43D73" style="height:72%">
 					<div class="card-body">
-						<h5 class="card-title">Seeking Support?</h5><a class="btn btn-primary" href="mailto:info@errandfolks.com" role="button">E-mail us</a>
+						<h5 class="card-title">Become a folk?</h5><a class="btn btn-primary" href="mailto:info@errandfolks.com" role="button">E-mail us</a>
 					</div>
 				</div>
 				<div>
