--- a/index.html
+++ b/index.html
@@ -31,8 +31,17 @@
 			</div>
 		</div>
 	</nav>
+	<div>
+		&nbsp;
+	</div>
+	<div>
+		&nbsp;
+		
+	</div>
+	
+	
 	<header class="bg-dark text-white header1">
-		<div class=" text-center">
+		<div class=" text-center" >
 		<p class="lead">ErrandFolks provides various services to people who can’t do errands during this pandemic.</p><img alt="logo" height="150px;" id="ef-logo" src="assets/img/ef_logo_crop.png" width="150px;"></div>
 	</header>
 	<div class="container">
@@ -114,6 +123,28 @@
 				</center>
 			</div>
 		</div>
+
+		<section id="test-csd">
+		
+        <!-- Connect Direct --> 
+        <script src="https://io.getconnectdirect.com/cd.js"></script> 
+        <script> 
+            // ConnectDirect Configuration 
+            var configCD = { 
+                enableASLNow: true, 
+                enableTextChat: true, 
+                disableOnUnsupportedBrowsers: true, 
+                ASLNowCTAClass: "ctaASLNow", 
+                TextChatCTAClass: "ctaTextChat", 
+                enableDebugging: false, 
+                hideVPNumber: false, 
+                hideMessageUs: false 
+            };            // Execute CD Plugin 
+            CDActivate(configCD); 
+        </script> 
+        <!-- End of Connect Direct --> 
+
+		</section>
 	</section><!-- Footer -->
 	<footer class="py-5 bg-dark text-white">
 		<div class="container text-center" style="color: white;">
