fixed csd script

--- a/index.html
+++ b/index.html
@@ -106,23 +106,8 @@
 		</section>
 	</div>
 	<section class="bg-light mx-auto" id="contact">
-	
-		<div class="col  shadow-lg call-us padding-bottom: -10px;">
-		
-				<div class="card rounded  bg-dark" style="width: 18rem;margin: 10px 0px 20px; padding-bottom: 20px;">
-					<center>
-						<h1 class="text-white">Call us!</h1>
-					<center>
-						<a  href="https://connectdirect.aslnow.io/app/8/10063/"><i class="fas fa-video fa-7x text-white"></i></a>
-					</center>
-					<p class="lead"><a class="btn btn-warning btn-lg" href="https://connectdirect.aslnow.io/app/8/10063/" role="button">ASL NOW!</a></p>
-					<div>
-						&nbsp;
-					</div><a class="btn btn-danger btn-lg" href="https://aslnow.com/faq" role="button">Need help?</a>
-					<p></p>
-				</center>
-			</div>
-		</div>
+
+	</section>
 
 		<section id="test-csd">
 		
