removing contact section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 					<li class="nav-item">
 						<a class="nav-link js-scroll-trigger" href="#support">Support | Volunteer</a>
 					</li>
-				
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -103,8 +105,9 @@
 			</div><img src="assets/img/ef_locations.jpg" style="width:100%;">
 		</section>
 	</div>
+	
 
-		<section id="test-csd">
+		<section id="contact">
 		
         <!-- Connect Direct --> 
         <script src="https://io.getconnectdirect.com/cd.js"></script> 
