added faq page, replaced card image

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 					<li class="nav-item">
 						<a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#faq">FAQ</a>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -85,11 +88,13 @@
 					&nbsp;
 				</div>
 				<div class="card">
-					<img alt="seeking support image" class="card-img-top" src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/p960x960/89435303_111647240457211_8864682559003426816_o.png?_nc_cat=109&_nc_sid=8024bb&_nc_oc=AQm_EZ0b9X3F39ySbceoZaxC0eeUjHAPkCxGbGE1DmbcFnNe4iAu3Iovtqn6bosPjyc&_nc_ht=scontent-lga3-1.xx&oh=7134664a1333b17f0ffc877d8fc29ccb&oe=5EF43D73" style="height:72%">
+					<img alt="collage of volunteers" class="card-img-top" src="assets/img/ef_map2.PNG" style="height:72%">
 					<div class="card-body">
-						<h5 class="card-title">Become a folk?</h5><a class="btn btn-primary" href="mailto:info@errandfolks.com" role="button">E-mail us</a>
+						<h5 class="card-title">Volunteer Opportunities</h5><a class="btn btn-primary" href="mailto:info@errandfolks.com" role="button">E-mail us</a>
 					</div>
 				</div>
+		
+				
 				<div>
 					&nbsp;
 				</div>
@@ -97,14 +102,16 @@
 					&nbsp;
 				</div>
 				<div class="card">
-					<img alt="collage of volunteers" class="card-img-top" src="assets/img/group_vols.PNG" style="height:72%">
+					<img alt="seeking support image" class="card-img-top" src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/p960x960/89435303_111647240457211_8864682559003426816_o.png?_nc_cat=109&_nc_sid=8024bb&_nc_oc=AQm_EZ0b9X3F39ySbceoZaxC0eeUjHAPkCxGbGE1DmbcFnNe4iAu3Iovtqn6bosPjyc&_nc_ht=scontent-lga3-1.xx&oh=7134664a1333b17f0ffc877d8fc29ccb&oe=5EF43D73" style="height:72%">
 					<div class="card-body">
-						<h5 class="card-title">Volunteer Opportunities</h5><a class="btn btn-primary" href="mailto:info@errandfolks.com" role="button">E-mail us</a>
+						<h5 class="card-title">FAQ</h5><a class="btn btn-primary" href="#faq" role="button">Read more...</a>
 					</div>
 				</div>
-			</div><img src="assets/img/ef_locations.jpg" style="width:100%;">
+				
+			<img src="assets/img/ef_locations.jpg" style="width:100%;">
+			
 		</section>
-	</div>
+
 	
 
 		<section id="contact">
@@ -128,6 +135,47 @@
         <!-- End of Connect Direct --> 
 
 		</section>
+
+	
+<section id="faq">
+	<ul class="list-group list-group-horizontal-xl">
+		<li class="list-group-item">
+
+<h1>FAQs</h1>
+<h4>What is ErrandFolks?</h4>
+<P>We are a volunteer based service that provides assistance to Deaf elders and people with health risks during this difficult time of the COVID-19 pandemic. Most of them are at risk to go out and collect their groceries or do any type of errands, and we want to help remove that fear.</P>
+</li>
+
+<li class="list-group-item list-group-item-dark">
+<h4>How does ErrandFolks work?</h4>
+<p>Our ultimate goal is to keep this simple and sweet for all of you! First, you will need to send an email to <a href="info@ErrandFolks.com">info@ErrandFolks.com</a> that you need support. We will respond with a few questions (your location/what you need/where we find them/when need it) Then we will send out confidential information to our folks in your location to see who is available to help you. When we have an ErrandFolk ready to support you, they will be connected with you to work together to get your errands done.</p>
+</li>
+<li class="list-group-item">
+
+<h4>How does the payment work?</h4>
+<p>There are two options. First, an ErrandFolk can pay for your items, then you reimburse them. The reimbursement can be via electronic transfer or cash, it will be decided between the client and ErrandFolk. Second option: the client pays in advance, then an ErrandFolk will share the receipt and reimburse the difference.</p>
+</li>
+<li class="list-group-item list-group-item-dark">
+
+<h4>Do I have to pay for the service?
+</h4>
+
+<p>No! It is 100% volunteer based service which means the volunteers are doing this for free. However, tips would be appreciated to cover expenses for gas. </p>
+</li>
+<li class="list-group-item">
+
+<h4>How can I become a volunteer?</h4>
+<p>I’m happy to know that you want to become a volunteer! It is simple and sweet, please send an email to <a href="info@ErrandFolks.com">info@ErrandFolks.com</a>  showing your interest to become a “folk” and we will be sending you a few questions form and have you filled it out. As soon as you filled out the form, we will need you to send us a video of you signing, “Hello! My name is (first/last). I’m here to support you in (location)”. Highly encouraged you to wear a deaf owned business shirt to show them your support! </p>
+</li>
+
+<li class="list-group-item list-group-item-dark">
+
+<h4>Do you accept Food Stamps?</h4>
+<p>No, we are not allowed to accept Food Stamps since it is not under our names. We are not able to exchange it with cash because it is illegal.</p>
+</li>
+</ul>
+</section>
+</div>
 	</section><!-- Footer -->
 	<footer class="py-5 bg-dark text-white">
 		<div class="container text-center" style="color: white;">
