fixed faq image, added shadow

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<h2>Services and Volunteering</h2>
 			<hr>
 			<div class="card-group">
-				<div class="card">
+				<div class="card shadow">
 					<img alt="cart in aisle and lady in front" class="card-img-top" src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/90866935_117377939884141_1536890962393956352_o.jpg?_nc_cat=106&_nc_sid=2d5d41&_nc_oc=AQl6NdJ4ZtL6uo89IZAKWED8CENNw5ufsjUNwGu7xr4CE6-MOOLqYuru5hsve8_HCfU&_nc_ht=scontent-lga3-1.xx&oh=8d24f8a2e6f635f5ad128ee5d8ffd233&oe=5EF5E8A9" style="height:72%">
 					<div class="card-body">
 						<h5 class="card-title">Grocery Shopping</h5><a class="btn btn-primary" href="mailto:info@errandfolks.com" role="button">E-mail us to request support</a>
@@ -87,7 +87,7 @@
 				<div>
 					&nbsp;
 				</div>
-				<div class="card">
+				<div class="card shadow">
 					<img alt="collage of volunteers" class="card-img-top" src="assets/img/ef_map2.PNG" style="height:72%">
 					<div class="card-body">
 						<h5 class="card-title">Volunteer Opportunities</h5><a class="btn btn-primary" href="mailto:info@errandfolks.com" role="button">E-mail us</a>
@@ -101,10 +101,13 @@
 				<div>
 					&nbsp;
 				</div>
-				<div class="card">
-					<img alt="seeking support image" class="card-img-top" src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/p960x960/89435303_111647240457211_8864682559003426816_o.png?_nc_cat=109&_nc_sid=8024bb&_nc_oc=AQm_EZ0b9X3F39ySbceoZaxC0eeUjHAPkCxGbGE1DmbcFnNe4iAu3Iovtqn6bosPjyc&_nc_ht=scontent-lga3-1.xx&oh=7134664a1333b17f0ffc877d8fc29ccb&oe=5EF43D73" style="height:72%">
+				<div class="card shadow">
+					<center>
+				
+					<img alt="collage of volunteers" class="card-img-top" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/87759805_111602913794977_8685969240399806464_o.png?_nc_cat=101&_nc_sid=85a577&_nc_oc=AQmvlbMcl74cJDrpOXWIAcnle6b-C67KJrpQIiLF6GfHckGa3-0aUysFjJv8Sfo63TM&_nc_ht=scontent-iad3-1.xx&oh=7c8dd01752181459121424833fc53263&oe=5EFBA6B3" >
+					</center>
 					<div class="card-body">
-						<h5 class="card-title">FAQ</h5><a class="btn btn-primary" href="#faq" role="button">Read more...</a>
+						<h5 class="card-title">FAQs</h5><a class="btn btn-primary" href="#faq" role="button">Read more...</a>
 					</div>
 				</div>
 				
@@ -138,7 +141,7 @@
 
 	
 <section id="faq">
-	<ul class="list-group list-group-horizontal-xl">
+	<ul class="list-group list-group-vertical-xl shadow">
 		<li class="list-group-item">
 
 <h1>FAQs</h1>
