fixed faq image, added shadow

--- a/index.html
+++ b/index.html
@@ -104,8 +104,14 @@
 				<div class="card shadow">
 					<center>
 				
-					<img alt="collage of volunteers" class="card-img-top" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/87759805_111602913794977_8685969240399806464_o.png?_nc_cat=101&_nc_sid=85a577&_nc_oc=AQmvlbMcl74cJDrpOXWIAcnle6b-C67KJrpQIiLF6GfHckGa3-0aUysFjJv8Sfo63TM&_nc_ht=scontent-iad3-1.xx&oh=7c8dd01752181459121424833fc53263&oe=5EFBA6B3" >
+					<img alt="collage of volunteers" class="card-img-top" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/87759805_111602913794977_8685969240399806464_o.png?_nc_cat=101&_nc_sid=85a577&_nc_oc=AQmvlbMcl74cJDrpOXWIAcnle6b-C67KJrpQIiLF6GfHckGa3-0aUysFjJv8Sfo63TM&_nc_ht=scontent-iad3-1.xx&oh=7c8dd01752181459121424833fc53263&oe=5EFBA6B3" style="height:120%">
 					</center>
+					<div>
+						&nbsp;
+					</div>
+					<div>
+						&nbsp;
+					</div>
 					<div class="card-body">
 						<h5 class="card-title">FAQs</h5><a class="btn btn-primary" href="#faq" role="button">Read more...</a>
 					</div>
