--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
 	
 	<header class="bg-dark text-white header1">
 		<div class=" text-center" >
-		<p class="lead">ErrandFolks provides various services to people who can’t do errands during this pandemic.</p><img alt="logo" height="150px;" id="ef-logo" src="assets/img/ef_logo_crop.png" width="150px;"></div>
+			<div>
+				&nbsp;
+			</div>
+		<p >ErrandFolks provides volunteers to support deaf elders and deaf people who are immunocompromised with grocery shopping and errands during this COVID-19 pandemic.</p><img alt="logo" height="150px;" id="ef-logo" src="assets/img/ef_logo_crop.png" width="150px;"></div>
 	</header>
 	<div class="container">
 		<section id="about">
@@ -60,7 +63,7 @@
 					</iframe>
 				</div>
 				<p>
-					<strong>ERRANDFOLKS</strong> is a volunteer based service that provides assistance to deaf elders and deaf people who are immunocompromised during this difficult time of the COVID-19 pandemic. Volunteers can safely help their communities by following this guide developed in accordance with your home state's Department of Public Health’s safety guidelines while volunteering.
+					<strong>ERRANDFOLKS:</strong> Volunteers can safely help their communities by following this guide developed in accordance with your home state's Department of Public Health’s safety guidelines while volunteering.
 				</p>
 			</div>
 		</section>
