--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div>
 				&nbsp;
 			</div>
-		<p >ErrandFolks provides volunteers to support deaf elders and deaf people who are immunocompromised with grocery shopping and errands during COVID-19 pandemic.</p><img alt="logo" height="150px;" id="ef-logo" src="assets/img/ef_logo_crop.png" width="150px;"></div>
+		<p >ErrandFolks provides volunteers to support deaf elders and deaf people who are immunocompromised with grocery shopping and errands during COVID-19 2020 pandemic.</p><img alt="logo" height="150px;" id="ef-logo" src="assets/img/ef_logo_crop.png" width="150px;"></div>
 	</header>
 	<div class="container">
 		<section id="about">
