updating username change

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 				&nbsp;
 			</div>
 			<p><a class="disable-link" href="info@errandfolks.com">Info@errandfolks.com</a></p>
-			<p>Copyright © 2020 Errand Folks | <a href="https://github.com/darh0ky" style="color:white;">JAM</a> - All Rights Reserved.</p>
+			<p>Copyright © 2020 Errand Folks | <a href="https://github.com/kuiil7/" style="color:white;">JAM</a> - All Rights Reserved.</p>
 		</div><!-- /.container -->
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js">
