added 100%width to btns

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<div class="card shadow">
 					<img alt="cart in aisle and lady in front" class="card-img-top" src="assets/img/cart_lady_in_front.jpg" style="height:72%">
 					<div class="card-body">
-						<h5 class="card-title">Grocery Shopping</h5><a class="btn btn-primary" href="mailto:info@errandfolks.com" role="button">E-mail us to request support</a>
+						<h5 class="card-title">Grocery Shopping</h5><a class="btn btn-block  btn-primary" href="mailto:info@errandfolks.com" role="button"> Request support</a>
 					</div>
 				</div>
 				<div>
@@ -94,7 +94,7 @@
 				<div class="card shadow">
 					<img alt="map" class="card-img-top" src="assets/img/ef_map2.PNG" style="height:72%">
 					<div class="card-body">
-						<h5 class="card-title">Volunteer Opportunities</h5><a class="btn btn-primary" href="mailto:info@errandfolks.com" role="button">E-mail us</a>
+						<h5 class="card-title">Volunteer Opportunities</h5><a class=" btn btn-block btn-primary" href="mailto:info@errandfolks.com" role="button">EMAIL US</a>
 					</div>
 				</div>
 		
@@ -117,7 +117,7 @@
 				</center>
 					
 					<div class="card-body">
-						<h5 class="card-title">FAQs</h5><a class="btn btn-primary" href="#faq" role="button">Read more...</a>
+						<h5 class="card-title">FAQs</h5><a class="btn btn-block  btn-primary" href="#faq" role="button">Read more...</a>
 					</div>
 				</div>
 				
