--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
+      name="ErrandFolks"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -23,22 +21,12 @@
 
 
 
-    <title>React App</title>
+    <title>ErrandFolks</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-    <!-- Connect Direct -->
     <script src="https://io.getconnectdirect.com/cd.js"></script>
     <script>
         // ConnectDirect Configuration
@@ -51,9 +39,9 @@
             enableDebugging: false,
             hideVPNumber: false,
             hideMessageUs: false
-        };            // Execute CD Plugin
+        };
         CDActivate(configCD);
     </script>
-  
+
   </body>
 </html>
